Project entry point

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,6 @@ textual-dev = "^1.5.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+trans-latex = "trans_latex.__main__:run_tui_app"
